fixed left aligned issue on larger devices and buttons

--- a/src/ui/screens/survey/ProfileSurvey.module.css
+++ b/src/ui/screens/survey/ProfileSurvey.module.css
@@ -134,6 +134,16 @@
   grid-gap: 0rem;
 }
 
+@media (min-width: 782px) {
+  .content {
+    grid-template-columns: 1fr;
+    max-width: 980px;
+    margin-left: auto;
+    margin-right: auto;
+    gap: 302px;
+  }
+}
+
 /* FIELDS */
 .field {
   margin-bottom: 0.5rem;
@@ -272,6 +282,8 @@ textarea.input {
   gap: 10px;
 }
 
+
+
 /* BUTTONS */
 .btnPrimary,
 .btnOutline {
@@ -388,6 +400,21 @@ textarea.input {
   }
 }
 
+@media (min-width: 782px) {
+  .bottomBar {
+    width: 100%;
+    align-items: flex-end;
+  }
+  .buttonRow {
+    width: 100%;
+    justify-content: stretch;
+    gap: 10px;
+  }
+  .buttonRow > div {
+    flex: 1;
+  }
+}
+
 .picturePreviewWrapper {
   margin-top: 10px;
 }
@@ -462,7 +489,7 @@ textarea.input {
   .buttonRow {
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space;
     gap: 8px;
   }
 
